# Capstone-Project-S2020

./: README  README.md
catkin_ws/devel/: .catkin  local_setup.sh  setup.sh
catkin_ws/devel/include/gpismap_ros/: MoveArmGoal.h  (+6 more)
catkin_ws/src/: .rosinstall  .rosinstall.bak
catkin_ws/src/gpismap_ros/: .gitignore  CMakeLists.txt  README  package.xml
catkin_ws/src/gpismap_ros/config/: gpismap.rviz
catkin_ws/src/gpismap_ros/data/poses/: example.txt  poses.txt
catkin_ws/src/gpismap_ros/include/gp/: GPisMap.h  GPisMap3.h  ObsGP.h  octree.h  params.h  quadtree.h  strct.h
catkin_ws/src/gpismap_ros/include/gpis_ros/: gp_mapper.h  matlab.h
catkin_ws/src/gpismap_ros/include/isosurface/: Algebra.h  Array.h  CmdLineParser.h  CmdLineParser.inl  Geometry.h  MarchingCubes.h
catkin_ws/src/gpismap_ros/mesh/: pile_00.ply  pile_01.ply
catkin_ws/src/gpismap_ros/mesh/50 mins/: params.txt  pile_00.ply  pile_01.ply  pile_02.ply  pile_03.ply  pile_04.ply  pile_05.ply  pile_06.ply  pile_07.ply  pile_08.ply  pile_09.ply
catkin_ws/src/gpismap_ros/mesh/After Calibration/: pile_00.ply  pile_01.ply  pile_04.ply  pile_05.ply  pile_06.ply  pile_11.ply
catkin_ws/src/gpismap_ros/mesh/Scans/: last_scan.ply  pile_00.ply  pile_01.ply  pile_test.ply  pile_test2.ply
catkin_ws/src/gpismap_ros/mesh/Untitled Folder/: ground.ply  pile_00.ply  pile_01.ply  pile_02.ply  pile_03.ply  pile_04.ply  pile_05.ply
catkin_ws/src/gpismap_ros/mesh/all tests/After Calibration/: pile_02.ply  pile_08.ply  pile_10.ply  pile_15.ply
catkin_ws/src/gpismap_ros/mesh/all tests/Dark Room/: Near zero lighting.ply  pile_00.ply  pile_02.ply
catkin_ws/src/gpismap_ros/mesh/all tests/Scans/: black_bowl.ply
catkin_ws/src/gpismap_ros/mesh/all tests/calib_test/: pile_05.ply  pile_06.ply
catkin_ws/src/gpismap_ros/mesh/all tests/new/: 25mins.ply  pile_00.ply
catkin_ws/src/gpismap_ros/mesh/all tests/new2/: pile_00.ply  pile_01.ply  pile_02.ply  pile_03.ply
catkin_ws/src/gpismap_ros/mesh/all tests/new2/boxes/: pile_00.ply  pile_01.ply  pile_03.ply  pile_04.ply  pile_06.ply  pile_08.ply  pile_09.ply  pile_10.ply  pile_11.ply  pile_12.ply  pile_13.ply  pile_14.ply  pile_15.ply  pile_16.ply
catkin_ws/src/gpismap_ros/mesh/all tests/new2/object 1/: pile_00.ply  pile_01.ply  pile_02.ply  pile_05.ply  pile_06.ply
catkin_ws/src/gpismap_ros/mesh/all tests/new2/object 2/: pile_00.ply  pile_01.ply  pile_02.ply  pile_03.ply  pile_04.ply  pile_05.ply  pile_06.ply  pile_07.ply
catkin_ws/src/gpismap_ros/mesh/all tests/no lighting/: Medium lighting.ply  pile_00.ply
catkin_ws/src/gpismap_ros/mesh/all tests/test_panels/: pile_00.ply  pile_06.ply
catkin_ws/src/gpismap_ros/mesh/all tests/tt/: pile_00.ply  pile_13.ply  pile_14.ply  pile_17.ply
catkin_ws/src/gpismap_ros/mesh/calib_test/: pile_01.ply  pile_02.ply  pile_04.ply  pile_07.ply
catkin_ws/src/gpismap_ros/mesh/calib_test2/: pile_00.ply  pile_02.ply  pile_03.ply  pile_04.ply  pile_05.ply  pile_06.ply  pile_07.ply  pile_09.ply  pile_10.ply  pile_11.ply  pile_12.ply  pile_13.ply  pile_14.ply  pile_15.ply  pile_16.ply  pile_19.ply  pile_20.ply  pile_22.ply  pile_23.ply
catkin_ws/src/gpismap_ros/mesh/clean/: pile_00.ply
catkin_ws/src/gpismap_ros/mesh/defined/: pile_00-0.01.ply  pile_00.ply  pile_01.ply
catkin_ws/src/gpismap_ros/mesh/high res 1hr30/: params.txt  pile_00.ply
catkin_ws/src/gpismap_ros/mesh/issue example/: pile_00.ply  pile_03.ply  pile_06.ply
catkin_ws/src/gpismap_ros/mesh/low res 20mins/: params.txt  pile_00.ply  pile_01.ply  pile_02.ply  pile_03.ply  pile_04.ply  pile_05.ply  pile_06.ply  pile_07.ply  pile_08.ply  pile_09.ply  pile_10.ply
catkin_ws/src/gpismap_ros/mesh/med res 1hr30mins/: params.txt  pile_00.ply  pile_01.ply  pile_02.ply  pile_03.ply  pile_04.ply  pile_05.ply  pile_06.ply  pile_07.ply
catkin_ws/src/gpismap_ros/mesh/test_panels/: pile_04.ply  pile_05.ply  pile_07.ply  pile_08.ply
catkin_ws/src/gpismap_ros/mesh/tt/: pile_02.ply  pile_03.ply  pile_06.ply  pile_10.ply  pile_12.ply  pile_15.ply  pile_16.ply  pile_18.ply  pile_20.ply
catkin_ws/src/gpismap_ros/src/: gpis3_main.cpp
catkin_ws/src/gpismap_ros/src/gp/: GPisMap.cpp  GPisMap3.cpp  ObsGP.cpp  OnGPIS.cpp  covFnc.cpp  quadtree.cpp  strct.cpp
catkin_ws/src/gpismap_ros/src/isosurface/: IsoSurfaceExtraction.cpp
catkin_ws/src/learning_tf/: CMakeLists.txt
catkin_ws/src/robot_motion_server/: CMakeLists.txt  usage.txt
catkin_ws/src/robotic_sensing/: CMakeLists.txt
catkin_ws/src/test_project/: CMakeLists.txt
(+199 files in other folders)
